# flake8-import-guard

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  commitlint.config.mjs  pyproject.toml
.github/: codecov.yml  dependabot.yml  renovate.json
.github/workflows/: ci.yml  codspeed.yml  dependabot-auto-merge.yml  linter.yml  pr.yml  release.yml  semantic-release.yml  test.yml
src/: __init__.py  main.py
tests/: sample.py  test_benchmark.py  test_main.py
